Tue Mar 19 20:42:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added `name' field to SilcChannelPrivateKey to represent
	  application given name for the key.  Moved also the context from
	  lib/silcclient/idlist.h into lib/silcclient/silcclient.h.
	  Added the `name' argument also to the function
	  silc_client_add_channel_private_key.

	  Added function silc_client_current_channel_private_key to set the
	  current channel private key in use.

	  Added "change" command to KEY command which can be used to change
	  the current channel private key.  Bound the command also to
	  alt+K (Alt+Shift+k).

	  Also affected files lib/silcclient/client_channel.c,
	  irssi/src/docs/help/in/key.in, irssi/src/silc/core/silc-channel.c.

Tue Mar 19 16:32:43 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_rng_get_byte_fast function in to the
	  lib/silccrypt/silcrng.[ch].

	* Changed the interface of silc_packet_assemble and the
	  silc_packet_send_prepare.  If silc_packet_assmble is now
	  called the application does not call silc_packet_send_prepare
	  because the library will call it automatically.  These
	  interfaces now also return a reference to the outgoing buffer
	  which includes the assembled packet, which the application can 
	  use to encrypt the packet.

	  Affected files are lib/silccore/silcpacket.[ch],
	  lib/silcclient/client.c, client_channel.c client_prvmsg.c,
	  silcd/packet_send.c, server_backup.c and packet_receive.c.

	* Fixed a packet sending bug on very high load, where outgoing
	  packet queue wasn't handled correctly and packets got corrupted.
	  Affected files are lib/silcutil/*/silc*sockconn.c,
	  lib/silcclient/client.c and silcd/server.c.

Mon Mar 18 21:00:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added macro SILC_PACKET_DATALEN which can be used during
	  packet assembling to check whether the data to be added to	
	  the packet will fit to SILC_PACKET_MAX_LEN.  If not the data